--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ $menu-title-color: lighten($menu-link-color, 20%);
 
 
 .menu {
-  z-index: -100;
+  // z-index: -100;
   width: 280px;
   height: 100%;
   position: fixed;
