--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,44 @@ h1 {
 .btn:focus {
   outline:0;
 }
+
+@media only screen and (max-width: 800px) {
+  .mobile {
+    display: none;
+  }
+
+  .container {
+    margin: auto;
+    width: 50%;
+  }
+
+  .card .front {
+    height: 500px;
+    width: 100%;
+  }
+
+  .card .back {
+    height: 500px;
+    width: 100%;
+  }
+
+  .card-container {
+    padding-top: 40px;
+  }
+
+  .card {
+    height: 500px;
+    width: 50%;
+    margin: 0 auto;
+    display: block;
+  }
+
+  .button-container {
+    text-align: center;
+    margin-top: 140px;
+  }
+
+  .btn {
+    margin: 10px;
+  }
+}
